--- a/apps/contact_cards/templates/index.html
+++ b/apps/contact_cards/templates/index.html
@@ -6,54 +6,42 @@
 }
 </style>
 
-
 <div class="section" id="app" v-cloak>
-  <!-- Put here your Vue.js template -->
   <div class="container">
     <h1 class="title">Contacts</h1>
-    <div><button class="button is-success" id="add_button">Add Contact</button></div>
-    <div class="card contact mt-4">
+    <div><button class="button is-success" id="add_button" @click="addContact">Add Contact</button></div>
+    <div class="card contact mt-4" v-for="(contact, index) in contacts" :key="index">
       <div class="card-content">
         <div class="media">
           <div class="media-left">
             <figure class="photo image is-96x96">
-              <img class="photo" src="https://bulma.io/assets/images/placeholders/96x96.png"/>
-              <input id="file-input" type="file" style="display: none"
-              accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*">
+              <img :src="contact.photo" class="photo" />
+              <input type="file" @change="updatePhoto($event, contact)" style="display: none" accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*">
             </figure>
           </div>
           <div class="media-content">
             <p class="title person-name">
-              <input type="text" class="input is-4 title" 
-                    name="name"
-                    placeholder="Name"
-              />
+              <input type="text" class="input is-4 title" v-model="contact.name" placeholder="Name" />
             </p>
             <p class="subtitle person-affiliation">
-              <input type="text" class="input is-6" 
-                    placeholder="Affiliation"
-                    name="affiliation"
-              />
+              <input type="text" class="input is-6" v-model="contact.affiliation" placeholder="Affiliation" />
             </p>
           </div>
-          <div class="media-right"><i class="delete-button has-text-danger fa fa-trash trash"></i></div>
+          <div class="media-right">
+            <i @click="deleteContact(index)" class="delete-button has-text-danger fa fa-trash trash"></i>
+          </div>
         </div>
-          <textarea class="textarea"
-                    name="description"
-                    placeholder="Description"
-            ></textarea> 
-        </div>
+        <textarea class="textarea" v-model="contact.description" placeholder="Description"></textarea>
       </div>
     </div>
   </div>
 </div>
 
-
 [[block page_scripts]]
 <!-- Loads the index-specific js for Vue -->
 <script>
   let get_contacts_url = "[[=XML(get_contacts_url)]]";
-  // Add more URLs if you wish. 
+  // Add more URLs if you wish.
 </script>
 
 <script src="js/index.js"></script>
